--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "urban-newspaper",
+  "name": "urban-alcohol-store",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -13,7 +13,9 @@
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
     "autoprefixer": "10.4.14",
+    "bootstrap": "^5.2.3",
     "next": "13.4.1",
+    "pg": "^8.10.0",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
