--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,9 @@ next-env.d.ts
 
 # Sentry Auth Token
 .sentryclirc
+
+# environment variables
+.env.local
+.env.development.local
+.env.test.local
+.env
