--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/node": "20.1.2",
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
+    "@vercel/edge-config": "^0.2.0",
     "autoprefixer": "10.4.14",
     "bootstrap": "^5.2.3",
     "next": "13.4.1",
